--- a/frontend/src/assets/components/chatbot/index.css
+++ b/frontend/src/assets/components/chatbot/index.css
@@ -1,22 +1,23 @@
 .chatbot-container {
-    position: fixed; 
-    bottom: 20px; 
-    right: 50px;
-    width: 25%; 
-    height: 500px; 
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: -5px 0px 10px grey;
-    display: flex;
-    flex-direction: column;
-    z-index: 1000; 
-    transition: all 0.3s ease; 
-  }
+  position: fixed; 
+  bottom: 20px; 
+  right: 50px;
+  width: 25%; 
+  height: 500px; 
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: -3px 0px 7px rgb(71, 71, 71);
+  display: flex;
+  flex-direction: column;
+  z-index: 1000; 
+  transition: width 0.6s ease-in-out, height 0.6s ease-in-out, bottom 0.6s ease-in-out, right 0.6s ease-in-out, border-radius 0.6s ease-in-out; 
+  transform-origin: bottom right;
+}
 
-  .chatbot-container.expanded {
-    width: 100%; 
-    height: 100vh; 
-    bottom: 0;
-    left: 0;
-    border-radius: 0; 
-  }
+.chatbot-container.expanded {
+  width: 100vw;
+  height: 100vh; 
+  bottom: 0;
+  right: 0;
+  border-radius: 0;
+}
